@@ -1,13 +1,18 @@
-
 #ifndef GEventAction_H
 #define GEventAction_H 1
 
 // geant4
 #include "G4UserEventAction.hh"
 
-class MEventAction : public G4UserEventAction
+class GEventAction : public G4UserEventAction
 {
+public:
+	GEventAction();
+	virtual ~GEventAction();
 	
+	virtual void BeginOfEventAction(const G4Event*);
+	virtual void EndOfEventAction(const G4Event*);
+
 };
 
 
